--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav>
         <ul class="nav-menu"> 
             <li>
-                <a href="Acasa.html" class="nav-link">Acasa</a>
+                <a href="index.html" class="nav-link">Acasa</a>
             </li> 
             <li>
                 <a href="Catalog.html" class="nav-link">Catalog</a>
@@ -37,19 +37,21 @@
     <!--Sectiune Jumbotron-->
     <div class="jumbotron-section">
         <div class="overlay"></div>
-        <h1>Site-ul <b>meu</b></h1>
-        <p>De când eram mic îmi plăcea să lucrez la computer. Acum incerc sa fac un site cu HTML.</p>
+        <h1><b>Jocuri si Programe</b></h1>
+        <p>Un site cu jocuri si programe. Ditractie!</p>
     </div>
     <!--Sectiune Jumobotron-->
 
     <!-- Page Content -->
     <section class="page-content">
         <div class="page-content--text">
-            <p>Pe scurt, JDM se referă la orice vehicul care a fost produs pentru piața autohtonă japoneză. Piața autohtonă japoneză este reprezentată de oameni care cumpără mașini în Japonia, pentru a fi utilizate pe drumurile japoneze. Așa că cineva din Tokyo se duce la reprezentanța locală Toyota, de exemplu, și cumpără o mașină nouă pentru a conduce la serviciu.</p>
-            <p>Toyota Supra (în japoneză: トヨタ・スープラ, Hepburn: Toyota Sūpura) este o mașină sport și un grand tourer fabricată de Toyota Motor Corporation începând cu 1978. Numele „supra” este derivat din prefixul latin, care înseamnă „deasupra”, „ a depăși” sau „a trece dincolo.
-                Primele patru generații ale Supra au fost produse din 1978 până în 2002. </p>
+            <p>Un joc este o activitate recreațională în care sunt implicați unul sau mai mulți jucători, fiind definit printr-un scop pe care jucătorii încearcă să-l atingă și un set de reguli care determină ce pot face jucătorii.</p>
+            <p>Jocurile pot implica un singur jucător, dar mai des implică o competiție între doi sau mai mulți jucători.De obicei sunt mai multe alegeri pe care jucătorul le poate face, cât timp respectă regulile. Nerespectarea regulilor se numește trișare.
+
+                În cadrul întregii istorii umane, oamenii au jucat jocuri ca o sursă de divertisment pentru ei înșiși și pentru alții și există o varietate enormă de jocuri.
+                 </p>
         </div>
-        <img src="https://source.unsplash.com/800x450/?supra mk4" alt="Side Image" class="page-content--img">
+        <img src="https://source.unsplash.com/800x450/?game" alt="Side Image" class="page-content--img">
     </section>
     <!-- End Page Content -->
 
