--- a/Contact.html
+++ b/Contact.html
@@ -20,7 +20,7 @@
     <nav>
         <ul class="nav-menu"> 
             <li>
-                <a href="Acasa.html" class="nav-link">Acasa</a>
+                <a href="index.html" class="nav-link">Acasa</a>
             </li> 
             <li>
                 <a href="Catalog.html" class="nav-link">Catalog</a>
