--- a/Contact.html
+++ b/Contact.html
@@ -65,6 +65,6 @@
     </div>
 
    <script src="./js/app.js"></script>
-   <script src="/js/contact.js"></script>
+   <script src="./js/contact.js"></script>
 </body>
 </html>
