--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="jumbotron-section">
         <div class="overlay"></div>
         <h1><b>Jocuri si Programe</b></h1>
-        <p>Un site cu jocuri si programe. Ditractie!</p>
+        <p>Un site cu jocuri si programe. Distractie!</p>
     </div>
     <!--Sectiune Jumobotron-->
 
